--- a/settings.json
+++ b/settings.json
@@ -10,7 +10,7 @@
   "theme": {
     "mode": "system",
     "light": "One Light",
-    "dark": "One Dark"
+    "dark": "Catppuccin Macchiato"
   },
   "tab_size": 2,
   "preferred_line_length": 80,
